name:                elm-docgen
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable elm-docgen
  main-is:             ./hs/main.hs
  build-depends:       base >=4.7 && <4.8
                     , template-haskell
                     , transformers >=0.2
                     , filepath     >=1.2
                     , directory    >=1.2
                     , process      >=1.2
                     , tagsoup      >=0.13
                     , text         >=1.2
                     , bytestring   >=0.10
                     , aeson        >=0.8
                     , unordered-containers >=0.2
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
